# master-thesis

./: .gitignore  .gitmodules  README.md  conda_venv_setup.sh
notebooks/1-low-dose-simulation/: 1-dicom-data.ipynb  2-histogram-matching.ipynb  3-nn-data.ipynb  4-phantom-stats.ipynb  5-phantom-noise-stats.ipynb  8-nn-image-thinning.ipynb
notebooks/2-segmentation/: 1-train_single.ipynb  3-evaluate_fov_single.ipynb  4-evaluate_over-underreach_single.ipynb  5-train_evaluate.ipynb
xray_fov/: .gitignore  build_and_install.sh  install_dev.sh  requirements.txt  setup.cfg
xray_fov/xray_fov/: paths.py
xray_fov/xray_fov/data/: dicom.py  image.py  operable_data.py
xray_fov/xray_fov/nn/: boundingbox.py  evaluate.py  fov.py  metrics.py  over_under_reach.py  train.py
xray_fov/xray_fov/nn/data/: dataloaders.py  dataset.py
xray_fov/xray_fov/nn/data/transform/: augmented.py  gaussian.py  gaussian_ratio.py  poisson.py  poisson_gaussian.py  poisson_inv.py  poisson_inv_gaussian.py  thinned.py
xray_fov/xray_fov/nn/defaults/: hyperparameters.py  loaders.py  models.py  train.py
xray_fov/xray_fov/nn/models/: unet.py  utils.py
xray_fov/xray_fov/plot/: basic.py  dicom.py  evaluate.py  histogram_matching.py  noise.py  phantom_stats.py
