[metadata]
name = xray_fov
version = 0.0.1

[options]
package_dir==.
packages=find:
install_requires = 
    numpy==2.3.5
    torch==2.9.1 
    torchvision==0.24.1
    pandas[excel]==2.3.3
    pydicom==3.0.1
    matplotlib==3.10.7
    scipy==1.16.3
    albumentations==2.0.8
    scikit-image==0.25.2
    monai==1.5.1
    tqdm==4.67.1
    dict_hash==1.3.7